--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-theme: jekyll-theme-merlot
+theme: jekyll-theme-minimal
+title: Yi Zhang | PhD Candidate
+description: Research in Alternative Polyadenylation and Cancer Biology
+show_downloads: false
