--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Yi Zhang | PhD Candidate
+title: Yi Zhang 
 description: Research in Alternative Polyadenylation and Cancer Biology
 show_downloads: false
 logo: /assets/image/73ac5cd055dbd6abd29f4d6987841c40.jpg 
